// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsyncSeriesWaterfallHook callAsync multi 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "after-1",
    0,
    2,
  ],
  [
    null,
    0,
    3,
  ],
  [
    "end",
  ],
  [
    null,
    "after-3",
  ],
]
`;

exports[`AsyncSeriesWaterfallHook callAsync multi 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "after-1",
    0,
    2,
  ],
  [
    null,
    0,
    3,
  ],
  [
    "end",
  ],
  [
    null,
    "after-3",
  ],
]
`;

exports[`AsyncSeriesWaterfallHook callAsync multi callback error 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "after-1",
    0,
    2,
  ],
  [
    "end",
  ],
  [
    [Error: error-2],
  ],
]
`;

exports[`AsyncSeriesWaterfallHook callAsync multi callback error 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "after-1",
    0,
    2,
  ],
  [
    "end",
  ],
  [
    [Error: error-2],
  ],
]
`;

exports[`AsyncSeriesWaterfallHook callAsync multi callback void 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  [
    "end",
  ],
  [
    null,
    "hooks",
  ],
]
`;

exports[`AsyncSeriesWaterfallHook callAsync multi callback void 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  [
    "end",
  ],
  [
    null,
    "hooks",
  ],
]
`;

exports[`AsyncSeriesWaterfallHook callAsync multi callback zero 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    0,
    0,
    3,
  ],
  [
    "end",
  ],
  [
    null,
    0,
  ],
]
`;

exports[`AsyncSeriesWaterfallHook callAsync multi callback zero 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    0,
    0,
    3,
  ],
  [
    "end",
  ],
  [
    null,
    0,
  ],
]
`;

exports[`AsyncSeriesWaterfallHook callAsync single 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "after-1",
    2,
  ],
  [
    "after-2",
    3,
  ],
  [
    "end",
  ],
  [
    null,
    "after-3",
  ],
]
`;

exports[`AsyncSeriesWaterfallHook callAsync single 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "after-1",
    2,
  ],
  [
    "after-2",
    3,
  ],
  [
    "end",
  ],
  [
    null,
    "after-3",
  ],
]
`;

exports[`AsyncSeriesWaterfallHook callAsync single callback error 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "after-1",
    2,
  ],
  [
    "end",
  ],
  [
    [Error: error],
  ],
]
`;

exports[`AsyncSeriesWaterfallHook callAsync single callback error 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "after-1",
    2,
  ],
  [
    "end",
  ],
  [
    [Error: error],
  ],
]
`;

exports[`AsyncSeriesWaterfallHook callAsync single callback false 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    false,
    3,
  ],
  [
    "end",
  ],
  [
    null,
    false,
  ],
]
`;

exports[`AsyncSeriesWaterfallHook callAsync single callback false 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    false,
    3,
  ],
  [
    "end",
  ],
  [
    null,
    false,
  ],
]
`;

exports[`AsyncSeriesWaterfallHook callAsync single callback void 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  [
    "end",
  ],
  [
    null,
    "hooks",
  ],
]
`;

exports[`AsyncSeriesWaterfallHook callAsync single callback void 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  [
    "end",
  ],
  [
    null,
    "hooks",
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise multi 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "after-1",
    0,
    2,
  ],
  [
    null,
    0,
    3,
  ],
  [
    "end",
  ],
  [
    "after-3",
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise multi 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "after-1",
    0,
    2,
  ],
  [
    null,
    0,
    3,
  ],
  [
    "end",
  ],
  [
    "after-3",
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise multi reject error 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "end",
  ],
  [
    [Error: error],
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise multi reject error 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "end",
  ],
  [
    [Error: error],
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise multi resolve error 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    [Error: error],
    0,
    3,
  ],
  [
    "end",
  ],
  [
    [Error: error],
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise multi resolve error 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    [Error: error],
    0,
    3,
  ],
  [
    "end",
  ],
  [
    [Error: error],
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise multi resolve void 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  [
    "end",
  ],
  [
    "hooks",
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise multi resolve void 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  [
    "end",
  ],
  [
    "hooks",
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise multi resolve zero 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    0,
    0,
    3,
  ],
  [
    "end",
  ],
  [
    0,
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise multi resolve zero 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    0,
    0,
    3,
  ],
  [
    "end",
  ],
  [
    0,
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise single 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "after-1",
    2,
  ],
  [
    "after-2",
    3,
  ],
  [
    "end",
  ],
  [
    "after-3",
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise single 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "after-1",
    2,
  ],
  [
    "after-2",
    3,
  ],
  [
    "end",
  ],
  [
    "after-3",
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise single reject error 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "end",
  ],
  [
    [Error: error],
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise single reject error 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "end",
  ],
  [
    [Error: error],
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise single resolve error 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    [Error: error],
    3,
  ],
  [
    "end",
  ],
  [
    [Error: error],
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise single resolve error 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    [Error: error],
    3,
  ],
  [
    "end",
  ],
  [
    [Error: error],
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise single resolve void 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  [
    "end",
  ],
  [
    "hooks",
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise single resolve void 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  [
    "end",
  ],
  [
    "hooks",
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise single resolve zero 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    0,
    3,
  ],
  [
    "end",
  ],
  [
    0,
  ],
]
`;

exports[`AsyncSeriesWaterfallHook promise single resolve zero 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    0,
    3,
  ],
  [
    "end",
  ],
  [
    0,
  ],
]
`;
